--- a/Module3/CaseStudy/casestudy/package.json
+++ b/Module3/CaseStudy/casestudy/package.json
@@ -26,6 +26,8 @@
     "bootstrap": "^4.5.0",
     "date-fns": "^2.14.0",
     "jquery": "^3.5.1",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-pagination": "^5.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
